--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.3"
+  },
+  "devDependencies": {
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.9"
   }
